# ------------------------------------------------------------------------------
# Copyright 2024 Munich Quantum Software Stack Project
#
# Licensed under the Apache License, Version 2.0 with LLVM Exceptions (the
# "License"); you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# https://github.com/Munich-Quantum-Software-Stack/QDMI/blob/develop/LICENSE
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.
#
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception
# ------------------------------------------------------------------------------

if(NOT CXX_DEVICE)
  # add CXX language support
  enable_language(CXX)
endif()

# ------------------------------------------------------------------------------
# Non-Functional Tests
# ------------------------------------------------------------------------------

generate_device_defs_executable(${QDMI_PREFIX})

# ------------------------------------------------------------------------------
# Functional Tests
# ------------------------------------------------------------------------------

# create an executable in which the tests will be stored
add_executable(maestro_device_test test_maestro_device.cpp)

# link the Google test infrastructure to the test executable.
target_link_libraries(maestro_device_test PRIVATE gtest_main qdmi::qdmi maestro_device
                                             qdmi::project_warnings)

# set c++ standard
target_compile_features(maestro_device_test PRIVATE cxx_std_17)

# ensure maestro_device and maestro_device_definitions_test are built whenever
# maestro_device_test is built
add_dependencies(maestro_device_test qdmi_test_maestro_device_defs)

# only discover tests if this is the main project
if(NOT MAESTRO_DEVICE_MASTER_PROJECT)
  return()
endif()

gtest_discover_tests(
  maestro_device_test
  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
  PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}"
             DISCOVERY_TIMEOUT 60)
